--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta property="og:title" content="SPIKES NETWORK">
     <meta property="og:type" content="website">
 
-<script async src="https://arc.io/widget.min.js#KUvAxVXR"></script>
+<script async src="https://arc.io/widget.min.js#b1HeJnQc"></script>
 
 
   </head>
